syntax = "proto3";

package protos;

service Network {
    rpc Connection (ConnectionRequest) returns (ConnectionReply) {}
    rpc Sampling (SamplingRequest) returns (SamplingReply) {}
    rpc SortPartition (SortPartitionRequest) returns (SortPartitionReply) {}
    rpc Shuffle (ShuffleRequest) returns (ShuffleReply) {}
    rpc Merge (MergeRequest) returns (MergeReply) {}
    rpc FileTransfer (FileRequest) returns (FileReply) {}
  }

  enum ResultType {
    FAILURE = 0;
    PENDING = 1;
    SUCCESS = 2;
  }

  message ConnectionRequest {
    string ip = 1;
    int32 port = 2;
  }
  message ConnectionReply {
    ResultType result = 1;
    string message = 2;
  }

  message SamplingRequest {
    string name = 1;
  }
  message SamplingReply {
    string message = 1;
  }

  message SortPartitionRequest {
    string name = 1;
  }
  message SortPartitionReply {
    string message = 1;
  }

  message ShuffleRequest {
    string name = 1;
  }
  message ShuffleReply {
    string message = 1;
  }

  message MergeRequest {
    string name = 1;
  }
  message MergeReply {
    string message = 1;
  }

  message FileRequest {
    string ip = 1;
    int32 port = 2;
    string inputdir = 3;
  }
  
  message FileReply {
    ResultType result = 1;
    string message = 2;
  }
  